[gd_scene load_steps=2 format=3 uid="uid://player_ui"]

[ext_resource type="Script" path="res://scripts/ui/player_ui.gd" id="1_ui"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ui")

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(200, 24)
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 44.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 192.0
offset_bottom = 20.0
text = "HP: 100/100"
horizontal_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(200, 16)
offset_left = 20.0
offset_top = 50.0
offset_right = 220.0
offset_bottom = 66.0
value = 100.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="StaminaBar"]
layout_mode = 0
offset_left = 8.0
offset_top = 1.0
offset_right = 192.0
offset_bottom = 15.0
text = "Stamina"
horizontal_alignment = 1

[node name="AbsorbContainer" type="HBoxContainer" parent="."]
offset_left = 20.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="AbsorbContainer"]
layout_mode = 2
text = "Absorbed: "

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dot" type="Panel" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="DamageNumber" type="Label" parent="."]
visible = false
offset_left = 100.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 20
text = "-10"
horizontal_alignment = 1